[package]
name = "gameboard"
version = "0.1.0"
description = "A library to create game board for text UI games."
readme = "README.md"
license = "MIT"
authors = ["Timur Shaykhiev <tshaykhiev@gmail.com>"]
edition = "2018"

[dependencies]
termion = "1.5.1"
unicode-segmentation = "1.2.0"

[dev-dependencies]
rand = "0.6"

[[example]]
name = "layout"
path = "examples/layout.rs"

[[example]]
name = "cells"
path = "examples/cells.rs"

[[example]]
name = "tictactoe"
path = "examples/tictactoe.rs"

[[example]]
name = "minesweeper"
path = "examples/minesweeper.rs"
