[package]
name = "gameboard"
version = "0.1.0"
description = "Rust library for creating game board for text UI games."
documentation = "https://docs.rs/gameboard"
repository = "https://github.com/TimurShaykhiev/gameboard"
keywords = ["game", "engine", "textUI"]
categories = ["game-engines"]
readme = "README.md"
license = "MIT"
authors = ["Timur Shaykhiev <tshaykhiev@gmail.com>"]
edition = "2018"

[dependencies]
termion = "1.5.1"
unicode-segmentation = "1.2.0"

[dev-dependencies]
rand = "0.6"

[[example]]
name = "layout"
path = "examples/layout.rs"

[[example]]
name = "cells"
path = "examples/cells.rs"

[[example]]
name = "tictactoe"
path = "examples/tictactoe.rs"

[[example]]
name = "minesweeper"
path = "examples/minesweeper.rs"
